--- a/website/templates/pages/address.html
+++ b/website/templates/pages/address.html
@@ -8,7 +8,7 @@
 	{% if df.fieldtype in ["Data", "Link"] -%}
 	<fieldset>
 		<label>{{ df.label }}</label>
-		<input type="text" placeholder="Type {{ df.label }}" 
+		<input class="form-control" type="text" placeholder="Type {{ df.label }}" 
 			data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}"
 			{% if doc and doc.fields.get(df.fieldname) -%} value="{{ doc.fields[df.fieldname] }}" {%- endif %}>
 	</fieldset>
@@ -37,7 +37,7 @@
 {%- endmacro %}
 
 {% block content %}
-<div class="col col-lg-12">
+<div class="col-md-12">
     <ul class="breadcrumb">
     	<li><a href="index">Home</a></li>
     	<li><a href="account">My Account</a></li>
@@ -52,10 +52,10 @@
 	<div id="address-error" class="alert alert-danger" style="display: none;"></div>
 	<form autocomplete="on">
 		<div class="row">
-			<section class="col col-lg-6">
+			<section class="col-md-6">
 				{{ render_fields(meta.left_fields) }}
 			</section>
-			<section class="col col-lg-6">
+			<section class="col-md-6">
 				{{ render_fields(meta.right_fields) }}
 			</section>
 		</section>
