--- a/website/templates/pages/cart.html
+++ b/website/templates/pages/cart.html
@@ -36,14 +36,14 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h4>Shipping Address</h4>
-					<div id="cart-shipping-address" class="accordion" 
+					<div id="cart-shipping-address" class="panel-group" 
 						data-fieldname="shipping_address_name"></div>
 					<button class="btn btn-default" type="button" id="cart-add-shipping-address">
 						<span class="icon icon-plus"></span> New Shipping Address</button>
 				</div>
 				<div class="col-md-6">
 					<h4>Billing Address</h4>
-					<div id="cart-billing-address" class="accordion"
+					<div id="cart-billing-address" class="panel-group"
 						data-fieldname="customer_address"></div>
 					<button class="btn btn-default" type="button" id="cart-add-billing-address">
 						<span class="icon icon-plus"></span> New Billing Address</button>
