[minor] [customer login] removed messages, fixes in sale, ticket

--- a/website/css/website.css
+++ b/website/css/website.css
@@ -198,3 +198,7 @@ fieldset[disabled] .btn-default.active {
   background-color: #a7a9aa;
   border-color: #a7a9aa;
 }
+
+.label {
+	padding-top: 0.3em;
+}
