--- a/website/templates/pages/ticket.html
+++ b/website/templates/pages/ticket.html
@@ -17,6 +17,9 @@
     	<li class="active"><i class="icon-ticket icon-fixed-width"></i> {{ doc.name }}</li>
     </ul>
 	<h3><i class="icon-ticket icon-fixed-width"></i> {{ doc.name }}</h3>
+	{% if doc.name == "Not Allowed" -%}
+		<script>ask_to_login();</script>
+	{% else %}
 	<hr>
 	{%- if doc.status -%}
 	{% if doc.status == "Waiting for Customer" -%}
@@ -46,6 +49,7 @@
 					<td>
 					<h5 style="text-transform: none">
 						{{ comm.sender }} on {{ utils.formatdate(doc.modified) }}</h5>
+					<hr>
 					<p>{{ webnotes.utils.is_html(comm.content) and comm.content or
 						comm.content.replace("\n", "<br>")}}</p>
 					</td>
@@ -58,5 +62,6 @@
 	<div class="alert">No messages</div>
 	{%- endif -%}
 	{%- endif -%}
+	{% endif -%}
 </div>
 {% endblock %}
