[website] [minor] moving to framework

--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -17,3 +17,5 @@
 	<a href="server.py?cmd=web_logout" title="Sign Out"><i class="icon-signout"></i></a>
 </div>
 {% endblock %}
+
+{% block footer %}{% include "app/portal/templates/includes/footer.html" %}{% endblock %}
