--- a/portal/templates/pages/cart.html
+++ b/portal/templates/pages/cart.html
@@ -1,4 +1,4 @@
-{% extends "app/website/templates/html/page.html" %}
+{% extends base_template %}
 
 {% block javascript %}
 	{% include "app/website/templates/js/cart.js" %}
