--- a/portal/templates/pages/profile.html
+++ b/portal/templates/pages/profile.html
@@ -9,7 +9,7 @@
     	<li><a href="account">My Account</a></li>
     	<li class="active"><i class="icon-user icon-fixed-width"></i> My Profile</li>
     </ul>
-	<div class="alert alert-warning" id="message" style="display: none;"></div>
+	<div class="alert" id="message" style="display: none;"></div>
 	<form>
 		<fieldset>
 			<label>Full Name</label>
