[website] [minor] moving to framework

--- a/portal/templates/includes/footer.html
+++ b/portal/templates/includes/footer.html
@@ -1,10 +1,6 @@
 {% extends "lib/website/templates/includes/footer.html" %}
 
-{% block powered %}
-<p style="float: right; clear: right;">
-	<a style="font-size: 90%; color: #888;" href="http://erpnext.org">ERPNext Powered</a>
-</p>
-{% endblock %}
+{% block powered %}<a style="font-size: 90%; color: #aaa;" href="http://erpnext.org">ERPNext Powered</a>{% endblock %}
 
 {% block extension %}
 <br>
