--- a/setup/doctype/item_group/templates/generators/item_group.html
+++ b/setup/doctype/item_group/templates/generators/item_group.html
@@ -5,7 +5,7 @@
 {% include 'app/stock/doctype/item/templates/includes/product_breadcrumbs.html' %}
 <div class="col-md-12">
 	{% if slideshow %}<!-- slideshow -->
-	{% include "lib/website/templates/includes/slideshow.html" %}
+	{% include "lib/website/doctype/website_slideshow/templates/includes/slideshow.html" %}
 	{% endif %}
 	{% if description %}<!-- description -->
 	<div>{{ description or ""}}</div>
@@ -32,10 +32,10 @@
 		{% endfor %}
 	</div>
 		{% if (items|length)==100 %}
-			<div class="alert info">Showing top 100 items.</div>
+			<div class="alert alert-info info">Showing top 100 items.</div>
 		{% endif %}
 	{% else %}
-		<div class="alert">No items listed.</div>
+		<div class="alert alert-warning">No items listed.</div>
 	{% endif %}
 </div>
 
