--- a/stock/doctype/item/templates/includes/product_search_box.html
+++ b/stock/doctype/item/templates/includes/product_search_box.html
@@ -22,7 +22,7 @@
 				return false;
 			});
 			$("#product-search").keypress(function(e) {
-				if(e.which==13) $("#product-search-btn").click();
+				if(e.which==13) $("#btn-product-search").click();
 			})
 		})
 	</script>
