--- a/portal/templates/includes/footer.html
+++ b/portal/templates/includes/footer.html
@@ -1,15 +1,18 @@
 {% extends "lib/website/templates/includes/footer.html" %}
 
-{% block powered %}<small><a href="http://erpnext.org" class="text-muted">ERPNext Powered</a></small>{% endblock %}
+{% block powered %}<a href="http://erpnext.org" style="color: #aaa;">ERPNext Powered</a>{% endblock %}
 
 {% block extension %}
-<div class="input-group col-md-6 col-md-offset-3" style="margin-top: 15px;">
-	<input class="form-control" type="text" id="footer-subscribe-email" placeholder="Your email address...">
-	<span class="input-group-btn">
-		<button class="btn btn-default" type="button" id="footer-subscribe-button">Stay Updated</button>
-	</span>
+<div class="container">
+	<div class="row">
+		<div class="input-group col-sm-6 col-sm-offset-3" style="margin-top: 7px;">
+			<input class="form-control" type="text" id="footer-subscribe-email" placeholder="Your email address...">
+			<span class="input-group-btn">
+				<button class="btn btn-default" type="button" id="footer-subscribe-button">Stay Updated</button>
+			</span>
+		</div>
+	</div>
 </div>
-<br>
 <script>
 	$("#footer-subscribe-button").click(function() {
 
