--- a/portal/templates/includes/footer.html
+++ b/portal/templates/includes/footer.html
@@ -16,11 +16,10 @@
 <script>
 	$("#footer-subscribe-button").click(function() {
 
-		$("#footer-subscribe-email").attr('disabled', true);
-		$("#footer-subscribe-button").html("Sending...")
-			.attr("disabled", true);
-
 		if($("#footer-subscribe-email").val()) {
+			$("#footer-subscribe-email").attr('disabled', true);
+			$("#footer-subscribe-button").html("Sending...")
+				.attr("disabled", true);
 			erpnext.send_message({
 				subject:"Subscribe me",
 				sender: $("#footer-subscribe-email").val(),
@@ -37,6 +36,8 @@
 				}
 			});
 		}
+		else
+			wn.msgprint("Please enter email address");
 	});
 </script>
 {% endblock %}
